--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+	<!-- This is all the code for my index page. I used notepad ++ to edit the majority of my code -->
    <title> Tyler's Website </title>
    <link rel="stylesheet" type="text/css" href="css/style.css">
    <body>
@@ -16,6 +17,7 @@
                   style="fill:lightgreen;stroke:black;stroke-width:5;opacity:0.5" />
             </svg>
          </a>
+	      <!--I usead a SVG element to act as my link to my aboutMe page-->
 		 <audio controls src="LinkExplain.mp3"> Webpage Cannot Suport Audio </audio>
 		 
       </div>
