--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+ 
+Formatted HTML:
 <!DOCTYPE html>
 <html>
-	<!-- This is all the code for my index page. I used notepad ++ to edit the majority of my code -->
    <title> Tyler's Website </title>
    <link rel="stylesheet" type="text/css" href="css/style.css">
    <body>
@@ -17,9 +18,7 @@
                   style="fill:lightgreen;stroke:black;stroke-width:5;opacity:0.5" />
             </svg>
          </a>
-	      <!--I usead a SVG element to act as my link to my aboutMe page-->
-		 <audio controls src="LinkExplain.mp3"> Webpage Cannot Suport Audio </audio>
-		 
+         <audio controls src="Enjoy.mp3"> Webpage Cannot Suport Audio </audio>
       </div>
       <footer class="footer">
          <p>See My College Calendar <a href="https://calendar.google.com/calendar/ical/tyler.krawec%40gmail.com/public/basic.ics"> Here </a></p>
@@ -28,6 +27,5 @@
       </footer>
    </body>
 </html>
-
 
 
