--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@ Formatted HTML:
          </a>
          <audio controls src="Enjoy.mp3"> Webpage Cannot Suport Audio </audio>
       </div>
+
+      <div class= "use"> 
+	       <h2 class="header"> Usability <h2>
+	       <p> For this website, I did the majority of my coding on Notepad ++, then uploaded the files to my github repository. This made making visual changes to my website a lot easier. I also linked another page with more information about me to give you a better idea of who I am. </p>
+      </div>
+    
       <footer class="footer">
          <p>See My College Calendar <a href="https://calendar.google.com/calendar/ical/tyler.krawec%40gmail.com/public/basic.ics"> Here </a></p>
          <p>See My Progress on Codecademy <a href="https://www.codecademy.com/users/Tjk6998/achievements"> Here </a></p>
