--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- 
+ <!-- This is all m HTML code which i styled using my CSS code -->
 Formatted HTML:
 <!DOCTYPE html>
 <html>
@@ -10,7 +10,7 @@ Formatted HTML:
       </header>
       <img class="logo" src="FGCUlogo.png" alt="FGCUlogo">
       <video src= "WebsiteIntro.mp4" controls> Webpage Cannot Support Video </video>
-      <div class="linkindex">
+      <div class="linkindex"> <!-- This is both a SVG element and a link to my next page -->
          <h3 class="header"> Click Below For More About Me </h3>
          <a align="center" href= ./aboutMe.html>
             <svg  width="400" height="180">
@@ -21,12 +21,12 @@ Formatted HTML:
          <audio controls src="Enjoy.mp3"> Webpage Cannot Suport Audio </audio>
       </div>
 
-      <div class= "use"> 
+      <div class= "use"> <!-- A brief description about the usability of my website -->
 	       <h2 class="header"> Usability <h2>
-	       <p> For this website, I did the majority of my coding on Notepad ++, then uploaded the files to my github repository. This made making visual changes to my website a lot easier. I also linked another page with more information about me to give you a better idea of who I am. </p>
+	       <p> For this website, I did the majority of my coding on Notepad ++, then uploaded the files to my github repository. This made making visual changes to my website a lot easier. The goal for this website is to put my name out there and to gain the interest of possible emplyers. I also linked another page with more information about me to give you a better idea of who I am. </p>
       </div>
     
-      <footer class="footer">
+      <footer class="footer"> <!--This footer has links to more of my work-->
          <p>See My College Calendar <a href="https://calendar.google.com/calendar/ical/tyler.krawec%40gmail.com/public/basic.ics"> Here </a></p>
          <p>See My Progress on Codecademy <a href="https://www.codecademy.com/users/Tjk6998/achievements"> Here </a></p>
          <p>Play The First Game I Made on Scratch <a href="https://scratch.mit.edu/projects/244161502/"> Here </a></p>
