--- a/aboutMe.html
+++ b/aboutMe.html
@@ -16,7 +16,7 @@
             <strong>asset</strong> to companies in the future. 
          </p>
       </div>
-      <div class="tips">
+      <div class="tips"> <!-- My tips for other college students-->
          <h3 align="left" class="header"> My Tips For College Life </h3>
          <ul align="left" class="list">
             <li> <strong>Have a schedule for weekly activities.</strong></li>
@@ -34,7 +34,7 @@
          </ul>
       </div>
       <img id="grad" src="GradPhoto.jpg" alt= "Grad Picture" >
-      <div class="linkabout">
+      <div class="linkabout"> <!-- This link brings you back to my first page.-->
          <h3 class="header"> Home Page </h3>
          <a href= ./index.html>
             <svg width="400" height="180">
@@ -43,7 +43,7 @@
             </svg>
          </a>
       </div>
-      // below i added my ceasar cipher and some other useful links //
+      <!-- Below is my ceasar cipher that can be used to encrypt your own text-->
       <div class= "cipher" >
          <h3 class= "header"> Encrypt Your Own Text With My Ceasar Cipher </h3>
          <label for="in">New Cipher</label>
