--- a/aboutMe.html
+++ b/aboutMe.html
@@ -54,6 +54,10 @@
          <p> This report was written like a letter to my parents explaining the fields of study I learned about this semester </p>
          <h3 class= "header"> See Me on LinkdIn <a href= "https://www.linkedin.com/in/tyler-krawec"> Here </a> </h3>
       </div>
+      
+      <canvas id="myCanvas" width="200" height="100" style="border:1px solid #000000;">
+      </canvas>
+      
       <footer class="footer">
          <p>See My College Calendar <a href="https://calendar.google.com/calendar/ical/tyler.krawec%40gmail.com/public/basic.ics"> Here </a></p>
          <p>See My Progress on Codecademy <a href="https://www.codecademy.com/users/Tjk6998/achievements"> Here </a></p>
