--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
       <div class= "use"> <!-- A brief description about the usability of my website -->
 	       <h2 class="header"> Usability <h2>
-	       <p> For this website, I did the majority of my coding on Notepad ++, then uploaded the files to my github repository. This made making visual changes to my website a lot easier. The goal for this website is to put my name out there and to gain the interest of possible emplyers. I also linked another page with more information about me to give you a better idea of who I am. </p>
+	       <p> For this website, I did the majority of my coding on Notepad ++, then I uploaded the files to my github repository. Working with a local copy made editing the visual apect of my website a lot easier because I did not have to wait for the github server to recognize he changes made. The goal for this website is to practice my coding abilities and create a somthing that might get me noticed by possible employers. My video is a brief summary of what you can expect to see on my website and why I put it there. There is a second page added to my website that is filled with even more information about me and what I accomplished while tudying software engineering. I made my site interactive and designed it around the univeristy where to try and show some school pride. It might not be perfect, but it was my first attempt at creating a personalized porfolio.   </p>
       </div>
     
       <footer class="footer"> <!--This footer has links to more of my work-->
