--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
  <!-- This is all m HTML code which i styled using my CSS code -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
    <title> Tyler's Website </title>
    <link rel="stylesheet" type="text/css" href="css/style.css">
    <body>
