--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang"en">
    <title> Tyler's Website </title>
    <link rel="stylesheet" type="text/css" href="css/style.css">
    <body>
